--- a/kk/yolo_old.ipynb
+++ b/kk/yolo_old.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,18 +162,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using downloaded and verified file: /data/torch/VOCdetection/VOCtrainval_11-May-2012.tar\n",
-      "Extracting /data/torch/VOCdetection/VOCtrainval_11-May-2012.tar to /data/torch/VOCdetection\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset = torchvision.datasets.VOCDetection(\n",
     "    root=DATA_DIR,\n",
@@ -199,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +210,8 @@
     "        #     nn.BatchNorm2d(192),\n",
     "        #     nn.ReLU()\n",
     "        # )\n",
-    "        self.conv1 = nn.Conv2d(3, 192, kernel_size=7, stride=2, padding=3)\n",
+    "        # self.conv1 = nn.Conv2d(3, 192, kernel_size=7, stride=2, padding=3)\n",
+    "        self.conv1 = nn.Conv2d(3, 192, kernel_size=3, padding='same')\n",
     "\n",
     "        self.conv2 = nn.Conv2d(192, 256, kernel_size=3, padding='same')\n",
     "\n",
@@ -380,83 +372,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------------------------------\n",
-      "        Layer (type)               Output Shape         Param #\n",
-      "================================================================\n",
-      "            Conv2d-1        [-1, 192, 224, 224]          28,416\n",
-      "       BatchNorm2d-2        [-1, 192, 224, 224]             384\n",
-      "         MaxPool2d-3        [-1, 192, 112, 112]               0\n",
-      "            Conv2d-4        [-1, 256, 112, 112]         442,624\n",
-      "       BatchNorm2d-5        [-1, 256, 112, 112]             512\n",
-      "         MaxPool2d-6          [-1, 256, 56, 56]               0\n",
-      "            Conv2d-7          [-1, 128, 56, 56]          32,896\n",
-      "       BatchNorm2d-8          [-1, 128, 56, 56]             256\n",
-      "            Conv2d-9          [-1, 256, 56, 56]         295,168\n",
-      "      BatchNorm2d-10          [-1, 256, 56, 56]             512\n",
-      "           Conv2d-11          [-1, 256, 56, 56]          65,792\n",
-      "      BatchNorm2d-12          [-1, 256, 56, 56]             512\n",
-      "           Conv2d-13          [-1, 512, 56, 56]       1,180,160\n",
-      "      BatchNorm2d-14          [-1, 512, 56, 56]           1,024\n",
-      "        MaxPool2d-15          [-1, 512, 28, 28]               0\n",
-      "           Conv2d-16          [-1, 256, 28, 28]         131,328\n",
-      "      BatchNorm2d-17          [-1, 256, 28, 28]             512\n",
-      "           Conv2d-18          [-1, 512, 28, 28]       1,180,160\n",
-      "      BatchNorm2d-19          [-1, 512, 28, 28]           1,024\n",
-      "           Conv2d-20          [-1, 256, 28, 28]         131,328\n",
-      "      BatchNorm2d-21          [-1, 256, 28, 28]             512\n",
-      "           Conv2d-22          [-1, 512, 28, 28]       1,180,160\n",
-      "      BatchNorm2d-23          [-1, 512, 28, 28]           1,024\n",
-      "           Conv2d-24          [-1, 256, 28, 28]         131,328\n",
-      "      BatchNorm2d-25          [-1, 256, 28, 28]             512\n",
-      "           Conv2d-26          [-1, 512, 28, 28]       1,180,160\n",
-      "      BatchNorm2d-27          [-1, 512, 28, 28]           1,024\n",
-      "           Conv2d-28          [-1, 256, 28, 28]         131,328\n",
-      "      BatchNorm2d-29          [-1, 256, 28, 28]             512\n",
-      "           Conv2d-30          [-1, 512, 28, 28]       1,180,160\n",
-      "      BatchNorm2d-31          [-1, 512, 28, 28]           1,024\n",
-      "           Conv2d-32          [-1, 512, 28, 28]         262,656\n",
-      "      BatchNorm2d-33          [-1, 512, 28, 28]           1,024\n",
-      "           Conv2d-34         [-1, 1024, 28, 28]       4,719,616\n",
-      "      BatchNorm2d-35         [-1, 1024, 28, 28]           2,048\n",
-      "        MaxPool2d-36         [-1, 1024, 14, 14]               0\n",
-      "           Conv2d-37          [-1, 512, 14, 14]         524,800\n",
-      "      BatchNorm2d-38          [-1, 512, 14, 14]           1,024\n",
-      "           Conv2d-39         [-1, 1024, 14, 14]       4,719,616\n",
-      "      BatchNorm2d-40         [-1, 1024, 14, 14]           2,048\n",
-      "           Conv2d-41          [-1, 512, 14, 14]         524,800\n",
-      "      BatchNorm2d-42          [-1, 512, 14, 14]           1,024\n",
-      "           Conv2d-43         [-1, 1024, 14, 14]       4,719,616\n",
-      "      BatchNorm2d-44         [-1, 1024, 14, 14]           2,048\n",
-      "           Conv2d-45         [-1, 1024, 14, 14]       9,438,208\n",
-      "      BatchNorm2d-46         [-1, 1024, 14, 14]           2,048\n",
-      "           Conv2d-47           [-1, 1024, 7, 7]       9,438,208\n",
-      "      BatchNorm2d-48           [-1, 1024, 7, 7]           2,048\n",
-      "           Conv2d-49           [-1, 1024, 7, 7]       9,438,208\n",
-      "      BatchNorm2d-50           [-1, 1024, 7, 7]           2,048\n",
-      "           Conv2d-51           [-1, 1024, 7, 7]       9,438,208\n",
-      "      BatchNorm2d-52           [-1, 1024, 7, 7]           2,048\n",
-      "           Linear-53                 [-1, 4096]     205,524,992\n",
-      "           Linear-54                 [-1, 1470]       6,022,590\n",
-      "================================================================\n",
-      "Total params: 272,089,278\n",
-      "Trainable params: 272,089,278\n",
-      "Non-trainable params: 0\n",
-      "----------------------------------------------------------------\n",
-      "Input size (MB): 2.30\n",
-      "Forward/backward pass size (MB): 349.93\n",
-      "Params size (MB): 1037.94\n",
-      "Estimated Total Size (MB): 1390.17\n",
-      "----------------------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = YOLO().to(DEVICE)\n",
     "\n",
@@ -466,46 +384,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_34327/789914508.py:157: UserWarning: Using a target size (torch.Size([4, 7, 7, 2])) that is different to the input size (torch.Size([4, 7, 7, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  local_x_loss = torch.sum(obj_ij * F.mse_loss(target[..., 0:1], pred[..., [5*i for i in range(self.B)]], reduce='none'))\n",
-      "/home/kookies371/miniconda3/envs/yolo/lib/python3.9/site-packages/torch/nn/_reduction.py:42: UserWarning: size_average and reduce args will be deprecated, please use reduction='mean' instead.\n",
-      "  warnings.warn(warning.format(ret))\n",
-      "/tmp/ipykernel_34327/789914508.py:158: UserWarning: Using a target size (torch.Size([4, 7, 7, 2])) that is different to the input size (torch.Size([4, 7, 7, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  local_y_loss = torch.sum(obj_ij * F.mse_loss(target[..., 1:2], pred[..., [5*i+1 for i in range(self.B)]], reduce='none'))\n",
-      "/tmp/ipykernel_34327/789914508.py:159: UserWarning: Using a target size (torch.Size([4, 7, 7, 2])) that is different to the input size (torch.Size([4, 7, 7, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  local_w_loss = torch.sum(obj_ij * F.mse_loss(torch.sqrt(target[..., 2:3]), torch.sqrt(pred[..., [5*i+2 for i in range(self.B)]]), reduce='none'))\n",
-      "/tmp/ipykernel_34327/789914508.py:160: UserWarning: Using a target size (torch.Size([4, 7, 7, 2])) that is different to the input size (torch.Size([4, 7, 7, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  local_h_loss = torch.sum(obj_ij * F.mse_loss(torch.sqrt(target[..., 3:4]), torch.sqrt(pred[..., [5*i+3 for i in range(self.B)]]), reduce='none'))\n",
-      "/tmp/ipykernel_34327/789914508.py:165: UserWarning: Using a target size (torch.Size([4, 7, 7, 2])) that is different to the input size (torch.Size([4, 7, 7, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  confidence_loss = torch.sum((1 + self.lambda_noobj * (1 - obj_ij)) * F.mse_loss(target[..., 4:5], pred[..., [5*i+4 for i in range(self.B)]], reduction='none'))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nan\n",
-      "nan\n",
-      "nan\n",
-      "nan\n",
-      "nan\n",
-      "nan\n",
-      "nan\n",
-      "nan\n",
-      "nan\n",
-      "nan\n",
-      "nan\n",
-      "Finished Training\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "optimizer = torch.optim.SGD(model.parameters(), lr=1e-3, momentum=0.9, weight_decay=5e-4)\n",
     "\n",
@@ -541,6 +422,13 @@
     "\n",
     "print('Finished Training')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
